--- a/src/app/face-snap/face-snap.component.html
+++ b/src/app/face-snap/face-snap.component.html
@@ -1,1 +1,6 @@
-<p>face-snap works!</p>
+<div>
+    <h2>{{title}}</h2>
+    <p>{{description}}</p>
+    <p>{{creationDate}}</p>
+    <p>👍 {{like}}</p>
+</div>
