data binding | attribut binding

--- a/src/app/face-snap/face-snap.component.html
+++ b/src/app/face-snap/face-snap.component.html
@@ -1,6 +1,7 @@
 <div>
     <h2>{{title}}</h2>
     <p>{{description}}</p>
-    <p>{{creationDate}}</p>
-    <p>👍 {{like}}</p>
+    <p>publish on {{creationDate}}</p>
+    <img [src]="imageurl" [alt]="title">
+    <p>👍 <button>like</button> {{like}}</p>
 </div>
