--- a/src/app/face-snap/face-snap.component.html
+++ b/src/app/face-snap/face-snap.component.html
@@ -1,7 +1,7 @@
-<div>
+<div class="face-snap-card">
     <h2>{{title}}</h2>
     <p>{{description}}</p>
     <p>publish on {{creationDate}}</p>
     <img [src]="imageurl" [alt]="title">
-    <p>👍 <button>like</button> {{like}}</p>
+    <p><button (click)="onAddClick()"> {{this.textButton}}</button> {{like}}</p>
 </div>
