--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,3 @@
-<app-face-snap *ngFor="let element of faceSnaps" [faceSnap]="element"></app-face-snap> 
-
+<app-header></app-header>
+<app-sace-snap-list></app-sace-snap-list>
  
